# rust-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
apps/admin/: package.json
apps/admin/src/app/: index.tsx
apps/admin/src/pages/metamorph/: index.page.tsx
apps/api/: Cargo.toml  package.json
apps/api/src/commands/server/: cors.rs  docs.rs  mod.rs
apps/api/src/commands/server/log/: formatter.rs  mod.rs  request.rs
apps/api/src/commands/server/log/http/: layer.rs  mod.rs  visitor.rs
apps/api/src/commands/server/log/http/layer/: mod.rs
apps/api/src/commands/server/log/http/request/: span.rs
apps/api/src/commands/server/log/http/response/: mod.rs  span.rs
apps/api/src/commands/server/logs/: layer.rs  mod.rs  visitor.rs
apps/cli/: Cargo.toml
apps/storefront/: package.json
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/app/: index.tsx  layout.tsx  page.tsx
apps/web/src/app/alert/: greet-button.tsx  page.tsx
apps/web/src/app/metamorph/: page.tsx
apps/web/src/app/metamorph/_components/: control.tsx  index.ts  performance.tsx
apps/web/src/types/: api.d.ts
