# Adds recommended packages below
[package]
name = "api"
version = "0.1.0"
description = "A simple Axum server with CLI capabilities"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
bon = "1.2.1"
chrono = "0.4.38"
color-eyre = "0.6.3"
derive_more = { version = "1.0.0", features = ["full"] }
nanoid = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "std",
] }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

# Recommended dependencies. These are recommendations, and can be added with the
# `cargo add` command.
# 
# -----------------------------------------------------[general recommendations]
# serde 
# git: https://github.com/serde-rs/serde
# command: cargo add serde
# desc: Serialization library for Rust
# 
# tokio = { , branch = "master" }
# git: https://github.com/tokio-rs/tokio
# command: cargo add tokio -F full
# desc: Asynchronous I/O for Rust
# 
# reqwest = { , branch = "master" }
# git: https://github.com/seanmonstar/reqwest
# command: cargo add reqwest -F json
# desc: Asynchronous HTTP client for Rust
# 
# once_cell 
# git: https://github.com/matklad/once_cell
# command: cargo add once_cell 
# desc: A simple, fast, thread-safe, zero-allocation, lazy static cell
# 
# ----------------------------------------------[error handling recommendations]
# anyhow 
# git: https://github.com/dtolnay/anyhow
# command: cargo add anyhow 
# desc: A lightweight, fast, and ergonomic error type for Rust
# 
# thiserror 
# git: https://github.com/dtolnay/thiserror
# command: cargo add thiserror
# desc: A lightweight, fast, and ergonomic error type for Rust
#
# -------------------------------------[diagnostics and testing recommendations]
# tracing 
# git: https://github.com/tokio-rs/tracing
# command: cargo add tracing
# desc: Application level tracing for Rust
# 
# tracing-subscriber
# git: https://github.com/tokio-rs/tracing
# command: cargo add tracing-subscriber
# desc: Utilities for implementing tracing subscribers
#
# insta 
# git: https://github.com/mitsuhiko/insta
# command: cargo add insta
# desc: A snapshot testing library for Rust
# 
# fake 
# git: https://github.com/cksac/fake-rs
# command: cargo add fake
# desc: A library for generating fake data
# 
# wiremock 
# git: https://github.com/LukeMathWalker/wiremock-rs
# command: cargo add wiremock
# desc: A library for mocking HTTP requests and responses
